--- a/src/components/header/HeaderStyles.module.css
+++ b/src/components/header/HeaderStyles.module.css
@@ -1,9 +1,9 @@
-.app-header {
+.appHeader {
     padding: 30px 40px;
     background-color: cyan;
 }
 
-.app-header-h1 {
+.appHeaderH1 {
     font-size: 50px;
     color: white;
     text-shadow: 1px 1px 2px black;;
