--- a/src/components/header/HeaderStyles.module.css
+++ b/src/components/header/HeaderStyles.module.css
@@ -1,11 +1,36 @@
 .appHeader {
     padding: 30px 40px;
     background-color: cyan;
+    display: flex;
+    align-items: center;
+}
+
+.appHeader a{
+    text-decoration: none;
 }
 
 .appHeaderH1 {
     font-size: 50px;
     color: white;
-    text-shadow: 1px 1px 2px black;;
+    text-shadow: 1px 1px 2px black;
     margin: 0;
+}
+
+.appHeaderNav {
+    display: flex;
+    gap: 16px;
+    align-items: center;
+    margin-left: 50px;
+    text-decoration: none;
+}
+
+.appHeaderNavItem, .appHeaderNavItemActive {
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    text-shadow: 1px 1px 2px black;
+}
+
+.appHeaderNavItemActive {
+    color: black;
 }
