--- a/src/pages/countries/components/list/countries/CountriesStyles.module.css
+++ b/src/pages/countries/components/list/countries/CountriesStyles.module.css
@@ -5,3 +5,17 @@
     flex-wrap: wrap;
     gap: 40px;
 }
+
+.sortButton {
+    width: 150px;
+    height: 30px;
+    margin-top: 20px;
+    margin-left: 30px;
+    background-color: transparent;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.sortButton:hover {
+    background-color: aquamarine;
+}
