--- a/src/pages/countries/components/list/countries/CountriesStyles.module.css
+++ b/src/pages/countries/components/list/countries/CountriesStyles.module.css
@@ -1,21 +1,11 @@
+.appCountriesContainer {
+    margin: 0 40px;
+}
+
 .appCountries {
-    margin: 30px 40px;
+    margin: 30px 0;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 40px;
-}
-
-.sortButton {
-    width: 150px;
-    height: 30px;
-    margin-top: 20px;
-    margin-left: 30px;
-    background-color: transparent;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.sortButton:hover {
-    background-color: aquamarine;
 }
