--- a/src/pages/countries/components/list/hero/HeroStyles.module.css
+++ b/src/pages/countries/components/list/hero/HeroStyles.module.css
@@ -1,11 +1,11 @@
 .appHero {
-    background: url(@/assets/hero.jpg);    
-    padding: 150px;
+  background: url(@/assets/hero.jpg);
+  padding: 150px;
 }
 
 .appHeroText {
-    margin: 0;
-    font-size: 50px;
-    color: white;
-    text-shadow: 1px 1px 2px black;;
+  margin: 0;
+  font-size: 50px;
+  color: white;
+  text-shadow: 1px 1px 2px black;
 }
