--- a/src/pages/countries/components/list/countries/countryCard/CountryCardStyles.module.css
+++ b/src/pages/countries/components/list/countries/countryCard/CountryCardStyles.module.css
@@ -15,26 +15,11 @@
   transform: scale(1.05);
 }
 
-.appCountryCardDeleteedContainer {
+.coutryEdit {
   position: absolute;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(255, 0, 0, 0.705);
-  border-radius: 12px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 10px;
-  z-index: 10;
-}
-
-.appCountryCardDeleteedContainerText {
-  color: white;
-  font-size: 25px;
-}
-
-.appCountryCardDeleteedContainerButton {
+  top: 10px;
+  right: 10px;
+  border: none;
+  background-color: transparent;
   cursor: pointer;
 }
