--- a/src/pages/countries/components/list/countries/CountriesStyles.module.css
+++ b/src/pages/countries/components/list/countries/CountriesStyles.module.css
@@ -2,12 +2,10 @@
   margin: 0 40px;
 }
 
-.appCountries {
+.appCountriesWrapper {
+  position: relative;
   margin: 30px 0;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: 40px;
+  width: 100%;
 }
 
 .appCountriesForms {
